fixed misalignments

--- a/Discord/comfy.theme.css
+++ b/Discord/comfy.theme.css
@@ -623,8 +623,7 @@
   will-change: transform;
 }
 :root .unread-36eUEm {
-  top: 5px;
-  left: 5px;
+  left: -2px;
   width: 6px;
   height: 12px;
   z-index: 1;
